# programmers_slam_project_template

./: .clang-format  .env  .gitignore  CMakeLists.txt  buildDeps.py  docker-compose.yaml  run-clang-format.py  temp-orbslam2.bash  test_profile.prof
.github/workflows/: build.yml  clang-tools.yml
cmake_files/: find_boost.cmake  find_cereal.cmake  find_ceres.cmake  find_cuda.cmake  find_eigen3.cmake  find_gl.cmake  find_google_libs.cmake  find_image_exts.cmake  find_opencv.cmake  find_pangolin.cmake  find_yaml_cpp.cmake  find_zip.cmake
dockerfiles/: README.md  base.dockerfile  build.dockerfile  orb-slam2.dockerfile  slam-base.dockerfile
examples/: example1.cpp
modules/module1/: CMakeLists.txt
modules/module1/include/module1/: Class.hpp
modules/module1/src/: Class.cpp
modules/module1/test/: CMakeLists.txt  main.cpp  sample1.cpp
